# deep-learning-oracle

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  textbooks.md
.ipynb_checkpoints/: chapter_1-checkpoint.ipynb
notes/diffusion/: diffusion.ipynb
notes/self_guidance_diffusion/: code.py  johnathan-ho-diffusion-vs-stable-diffusion-diagram.md  self-guidance-code-diagram.md  self-guidance-notes.ipynb  stable-diffusion-code.py  stable-diffusion-xl-pipeline-class-diagram.md  stable-diffusion-xl-working-diagram.md
notes/stable_diffusion/: stable-diffusion-notes.ipynb
projects/: 2_basic_nn_mlp.ipynb  2_cnn.ipynb  3_autoencoders.ipynb  3_variational_autoencoder.ipynb  5_lstm.ipynb  lstm.ipynb  vae_fashion.ipynb
projects/2_basic_nn/: basic_nn_mlp.ipynb
projects/5_lstm/: lstm.ipynb
projects/8_diffusion/: diffusion.ipynb
projects/8_diffusion/checkpoint/: checkpoints.weights.h5
projects/projects/2_cnn/: cnn.ipynb
projects/scripts/: download.sh
projects/weights/: 5_lstm.h5  ch_3_autoencoder_model_weights.h5  ch_3_encoder_model_weights.h5
textbook_deep_learning_w_pytorch/: chapter_2.ipynb  chapter_3.ipynb  chapter_5.ipynb
textbook_generative_deep_learning/: ch_1_wip.ipynb  ch_2_basic_nn_mlp.ipynb  ch_2_cnn.ipynb  ch_2_mlp_cnn.ipynb  ch_3_autoencoders.ipynb  ch_3_variational_autoencoder.ipynb
textbook_generative_deep_learning/weights/: ch_2_basic_nn_model_mlp_weights.h5  ch_2_cnn_model_weights_new.h5
textbooks/deep_learning_w_pytorch/: chapter_4.ipynb
textbooks/generative_deep_learning/: README.md
(+7 files in other folders)
